Fixed bug where holding down buttons would cause them to be stuck in the playing class

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ h1 {
 }
 
 .key-large {
-  grid-column: span 2;
   width: 200px;
   text-align: center;
 }
